		crash once, reported by Mr Faber.
		* Fixed a lock with high CPU usage when crashing in amuled,
		because wxExecute() could be called from the FatalErrorHandler()
		not from the main thread, which is currently prohibited in
		wxWidgets.
		* Fixed preview with mplayer or any other app that needs
		stdout/stderr.
		* Fixed lots of segfaults in amuleweb, thanks to alandar and
		Mr Faber.

	volpol
		* Patch to fix use of deprecated functions in wxGTK-2.5.3.

	Special Thanks To:
		* Bug and feature reporters:
		alandar
		feralertx
		Frankk
		Mr Faber
		rommel

--------------------------------------------------------------------------------

Version 2.0.0rc8 - The "last rc" version.
----------
2004-12-21

	Baz:
		* Fix for server stats for users/files not being updated correctly.
		* Fix for ERROR and WARNING server messages not being shown.
		* Fixed server / transfers window splitters not being loaded/saved correctly.
		* Fixed categories on search dialog not being refreshed on category name change.

	deltaHF: 
		* Show comments for shared files

	Hetfield:
		* Some fix in new Tray system and desktopMode bypass

	Jacobo221:
		* Added option to select the max and min size-type in advanced
		  searches.
		* When "Extended Parameters" in Search tab is not selected, 
		  defaults are used.
		* Now "Auto-update serverlist at startup" checks if there's a 
		  serverlist to avoid annoying messages at startup.
		* "Clear completed downloads" is now disabled while no
		  completed downloads are listed.
		* Context menu for download items only enables relevant
		  information now.
		* Context menu little optimization (removed an unuseful loop)
		  and Open File fix.
		* Added bitmap button wich pops-up the last status log line
		  (useful when it doesn't fit the window).
		* Merged Preview and Open File and enabled Open File.
		* New Port column in Servers tab (splitting IP column).
		* Moved "Always filter bad IPs" from Server to Security
		  in Preferences.